--- a/DigitalDevice/app/src/main/res/layout/activity_register.xml
+++ b/DigitalDevice/app/src/main/res/layout/activity_register.xml
@@ -240,7 +240,7 @@
             android:id="@+id/lottieSuccess"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:lottie_rawRes="@raw/animation_success"
+            app:lottie_rawRes="@raw/animtion_success"
             app:lottie_autoPlay="true"
             app:lottie_loop="false"
             app:lottie_speed="1.0"
