--- a/DigitalDevice/app/src/main/res/layout/item_vehical.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_vehical.xml
@@ -29,20 +29,22 @@
 
                     <TextView
                         android:id="@+id/txt_Name"
-                        android:layout_width="288dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:gravity="center_vertical"
                         android:paddingLeft="10dp"
+                        android:layout_weight="1"
                         android:text="Xe của Bố - Taycan turbo"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
-                    <ImageView
-                        android:id="@+id/imgConditionConnect"
+                    <Switch
+                        android:id="@+id/switchMonitor"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/dis_connect" />
+                        android:layout_height="36dp"
+                        android:layout_alignParentEnd="true"
+                        />
+
                 </LinearLayout>
 
                 <ImageView
